--- a/html/newPage3.html
+++ b/html/newPage3.html
@@ -16,9 +16,9 @@
     />
   </head>
   <body lang="es-ES" class="container text-center">
-    <h1>
+    <h1 id="titulo" textContent="">
       <img
-        id="imagen5"
+        id="imagen"
         src="../imagenes/BD1.gif"
         name="Imagen1"
         align="CENTER"
@@ -26,18 +26,15 @@
         height="50"
       /><br clear="LEFT" /><br /><br />
     </h1>
-    <!--
-                        <H1 ID="titulo5">Mi primera página HTML</H1>
-                <P>
-                        <BR><BR>
-                </P>
-                -->
+    <h1 id="titulo5">Mi primera página HTML</h1>
+    <p><br /><br /></p>
     <div class="row text-center">
       <div class="col-md-6">
         <span>&larr;</span><a href="pagina4.html">Mi cuarta página HTML</a>
       </div>
       <div class="col-md-6">
-        <a id="enlace5" href="pagina2.html">Mi segunda página HTML</a
+        <a id="enlace" href="pagina2.html" textContent=""
+          >Mi segunda página HTML</a
         ><span>&rarr;</span>
       </div>
     </div>
