--- a/josebedoya.html
+++ b/josebedoya.html
@@ -11,7 +11,7 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
-                <H1 ID="titutlo" textcontext="">
+                <H1 ID="titutlo" textContent="Test">
                         <IMG ID="imagen" SRC="imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </H1>
                 <!--
@@ -22,7 +22,7 @@
                 -->
                 <div class="row text-center">                       
                         <div class="col-md-6">
-                                <A ID="enlace" HREF="pagina2.html" textcontext="">Mi segunda página HTML</A><span>&rarr;</span>
+                                <A ID="enlace" HREF="pagina2.html" textContent="Segunda pagina">Mi segunda página HTML</A><span>&rarr;</span>
                         </div>
                 </div>
                 <P></P>
