--- a/html/saramayavillada.html
+++ b/html/saramayavillada.html
@@ -11,9 +11,9 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
-            <h1 id="titulo" textContent="titulo"></h1>
-            <img id="imagen" SRC="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50></img>
-            <a ID="enlace" HREF="pagina2.html" textContent="enlace"></a>>Mi primera página HTML</a>  
+            <h1 id="titulo" textContent="titulo">Titulo de la pagina</h1>
+            <img id="imagen" src="../imagenes/BD1.gif"></img>
+            <a id="enlace" href="pagina2.html" textContent="enlace"></a>>Mi primera página HTML</a>  
           
                 
         </BODY>
