modificacion archivo sara maya

--- a/html/saramayavillada.html
+++ b/html/saramayavillada.html
@@ -10,10 +10,10 @@
                 <META NAME="CHANGED" CONTENT="">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </HEAD>
-        <BODY LANG="es-ES" class="container text-center">
-            <h1 id="titulo" textContent="titulo">Titulo de la pagina</h1>
-            <img id="imagen" src="../imagenes/BD1.gif"></img>
-            <a id="enlace" href="pagina2.html" textContent="enlace"></a>>Mi primera página HTML</a>  
+        <BODY>
+            <h1 id="titulo" textContent="tituloPagina">Titulo de la pagina</h1>
+            <img id="imagen" src="//imagenes/BD1.gif"></img>
+            <a id="enlace" href="#" textContent="enlacePagina"></a> 
           
                 
         </BODY>
