--- a/JeimmyCamacho.html
+++ b/JeimmyCamacho.html
@@ -13,8 +13,16 @@
         <BODY LANG="es-ES" class="container text-center">
                 <BODY LANG="es-ES" class="container text-center">
                         <H1 ID="titulo" textContent="textH1">Segunda Contribución al proyecto por Jeimmy Camacho</H1>
-                        <IMG ID="imagen" SRC="./imagenes/BD1.gif" NAME="imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50>
-                        <A ID="enlace" HREF="pagina2.html" textContent="textA">Enlace a segunda página</A>
+                        <IMG ID="imagen" SRC="./imagenes/BD1.gif" NAME="imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                        <A id="enlace" HREF="index.html" textContent="prueba">Mi página indice</A>
+                        <div class="row text-center">
+                                <div class="col-md-6">
+                                        <span>&larr;</span><A HREF="pagina4.html">Mi cuarta página HTML</A>
+                                </div>
+                                <div class="col-md-6">
+                                        <A ID="enlace5" HREF="pagina2.html">Mi segunda página HTML</A><span>&rarr;</span>
+                                </div>
+                        </div>
                 </BODY>
         </BODY>
 </HTML>
