--- a/arturoReyna.html
+++ b/arturoReyna.html
@@ -10,9 +10,23 @@
                 <META NAME="CHANGED" CONTENT="">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </HEAD>
-        <BODY LANG="es-ES" class="container text-center">
-                <h1 ID="titulo" textContent="Hola">Mi primera página HTML</h1>
-                <img ID="imagen" SRC="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50>
-                 <a ID="enlace" HREF="pagina2.html" textContent="Hola x2">Mi segunda página HTML</a>  
+        <BODY LANG="es-ES" class="container text-center">                
+                
+                <h1 id="titulo" textContent="primera pagina">Mi primera página HTML</h1>
+                <img id="imagen" src="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                <!--                        
+                <P>
+                        <BR><BR>
+                </P>
+                -->
+                <div class="row text-center">
+                        <div class="col-md-6">
+                                <span>&larr;</span><A HREF="pagina4.html">Mi cuarta página HTML</A>
+                        </div>
+                        <div class="col-md-6">
+                                <a id="enlace" href="pagina2.html" textContent="segunda pagina">Mi segunda página HTML</a><span>&rarr;</span>
+                        </div>
+                </div>
+                <P></P>
         </BODY>
 </HTML>
