--- a/html/danielboggiano.html
+++ b/html/danielboggiano.html
@@ -11,13 +11,16 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
-                <H1>
-                        <IMG ID="imagen5" SRC="../imagenes/90078629.jpg" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=350><BR CLEAR=LEFT><BR>
-                </H1>
-                        <H1 ID="titulo5">Java: The Best Programing Language</H1>
-                <P>     Java es un lenguaje de programación ampliamente utilizado para codificar aplicaciones web. Ha sido una opción popular entre los desarrolladores durante más de dos décadas, con millones de aplicaciones Java en uso en la actualidad. Java es un lenguaje multiplataforma, orientado a objetos y centrado en la red que se puede utilizar como una plataforma en sí mismo. Es un lenguaje de programación rápido, seguro y confiable para codificarlo todo, desde aplicaciones móviles y software empresarial hasta aplicaciones de macrodatos y tecnologías del servidor.        
-                        <BR>
+                
+                <IMG ID="imagen" SRC="../imagenes/90078629.jpg" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=350><BR CLEAR=LEFT><BR>
+
+                <H1 ID="titulo">¿Qué es Java?</H1>
+
+                <P> 
+                    Java es un lenguaje de programación ampliamente utilizado para codificar aplicaciones web. Ha sido una opción popular entre los desarrolladores durante más de dos décadas, con millones de aplicaciones Java en uso en la actualidad. Java es un lenguaje multiplataforma, orientado a objetos y centrado en la red que se puede utilizar como una plataforma en sí mismo. Es un lenguaje de programación rápido, seguro y confiable para codificarlo todo, desde aplicaciones móviles y software empresarial hasta aplicaciones de macrodatos y tecnologías del servidor.        
+                    <BR>
                 </P>
+
                 <div class="row text-center">
                         <div class="col-md-6">
                                 <span>&larr;</span><A HREF="danielboggiano.html">Mi anterior página HTML</A>
