--- a/html/receta-brayanlopez.html
+++ b/html/receta-brayanlopez.html
@@ -12,17 +12,17 @@
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
                 <H1>
-                        <IMG ID="imagen" SRC="../imagenes/BD2.gif" NAME="Imagen2" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                        <IMG ID="imagen5" SRC="../imagenes/BD2.gif" NAME="Imagen2" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </H1>
-                
+                <!--
                         <H1 ID="titulo1">Mi primera página HTML</H1>
                 <P>
                         <BR><BR>
                 </P>
-                
+                -->
                 <div class="row text-center">
                         <div class="col-md-6">
-                                <span>&larr;</span><A ID="enlace" HREF="pagina5.html">Mi quinta página HTML</A>
+                                <span>&larr;</span><A HREF="pagina5.html">Mi quinta página HTML</A>
                         </div>
                         <div class="col-md-6">
                                 <A ID="enlace5" HREF="pagina2.html">Mi segunda página HTML</A><span>&rarr;</span>
