--- a/html/receta-brayanlopez.html
+++ b/html/receta-brayanlopez.html
@@ -14,12 +14,12 @@
                 <H1>
                         <IMG ID="Imagen2" SRC="../imagenes/BD2.gif" NAME="Imagen2" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </H1>
-                <!--
-                        <H1 ID="titulo1">Mi primera página HTML</H1>
+                
+                        <H1> ID="titulo1">Mi primera página HTML</H1>
                 <P>
                         <BR><BR>
                 </P>
-                -->
+                
                 <div class="row text-center">
                         <div class="col-md-6">
                                 <span>&larr;</span><A HREF="pagina5.html">Mi quinta página HTML</A>
