--- a/html/receta-brayanlopez.html
+++ b/html/receta-brayanlopez.html
@@ -15,7 +15,7 @@
                         <IMG ID="Imagen2" SRC="../imagenes/BD2.gif" NAME="Imagen2" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </H1>
                 
-                        <H1> ID="titulo1">Mi primera página HTML</H1>
+                        <H1> <ID="titulo1">Mi primera página HTML</H1>
                 <P>
                         <BR><BR>
                 </P>
