Corrección de requermimientos minimos - Tutorial

--- a/LuisaTorres.html
+++ b/LuisaTorres.html
@@ -12,7 +12,7 @@
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
                 <h1 id="titulo" textContent="true">
-                        <img ID="imagen" scr="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                        <img id="imagen" scr="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </h1>
                 <!--
                         <H1 ID="titulo5">Mi primera página HTML</H1>
@@ -21,9 +21,6 @@
                 </P>
                 -->
                 <div class="row text-center">
-                        <div class="col-md-6">
-                                <span>&larr;</span><A HREF="pagina4.html">Mi cuarta página HTML</A>
-                        </div>
                         <div class="col-md-6">
                                 <a id="enlace" href="pagina2.html" textContent="true">Mi segunda página HTML</a><span>&rarr;</span>
                         </div>
