--- a/DanielRequena.html
+++ b/DanielRequena.html
@@ -12,7 +12,7 @@
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
                 <h1 titulo="Imagen cabecera" textContent="Logo cabecera Daniel Requena">
-                        <img id="imagen" src="imagenes/BD5.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                        <img id="imagen" src="imagenes/banner-header.jpg" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </h1>
                 
                 <H1 ID="titulo5">Mi primera página HTML</H1>
