--- a/juanpablo.html
+++ b/juanpablo.html
@@ -15,7 +15,7 @@
                        
                 </h1>
 
-                <img id="imagen" src="C:\Users\juanp\OneDrive\Escritorio\Programación jp\Coursera\Github UniAndes\pull_web_practice\pull_web_practice\imagenes\Captura.PNG">
+                <img id="imagen" src="C:\Users\juanp\OneDrive\Escritorio\Programación jp\Coursera\Github UniAndes\pull_web_practice\pull_web_practice\imagenes\Captura.jpg">
                 <a id="enlace" href="https://www.instagram.com/" textContent="Instagram">enlace</a>
                 
         </BODY>
