--- a/Otrapagina.html
+++ b/Otrapagina.html
@@ -12,7 +12,7 @@
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
                 <H1 ID="titulo">Otra página web</H1>
-                        <IMG ID="imagen" SRC="../imagenes/image.jpg" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                        <IMG ID="imagen" SRC="../imagenes/banner_recetas.jpg" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </H1>
                 <!--
                         <H1 ID="titulo5">Mi primera página HTML</H1>
