--- a/html/nicbot23.html
+++ b/html/nicbot23.html
@@ -12,20 +12,18 @@
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
                 <H1>
-                        <IMG ID="imagen5" SRC="../imagenes/BD5.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                        <img ID="imagen5" src="../imagenes/BD5.gif" name="Imagen1" align=CENTER width=700 height=50><br clear=LEFT><br><br>
                 </H1>
-                <!--
-                        <H1 ID="titulo5">Mi primera página HTML</H1>
+                        <H1 ID="titulo5" textContent>Mi primera página HTML</H1>
                 <P>
                         <BR><BR>
                 </P>
-                -->
                 <div class="row text-center">
                         <div class="col-md-6">
                                 <span>&larr;</span><A HREF="nicbot23.html">Mi name of HTML</A>
                         </div>
                         <div class="col-md-6">
-                                <A ID="enlace5" HREF="pagina_apc1.html">Mi segunda página HTML</A><span>&rarr;</span>
+                                <a id="enlace" href="pagina_apc1.html" textContent>Mi segunda página HTML</a><span>&rarr;</span>
                         </div>
                 </div>
                 <P></P>
