--- a/IngEdwardRamirez.html
+++ b/IngEdwardRamirez.html
@@ -13,7 +13,7 @@
         <BODY LANG="es-ES" class="container text-center">
 				<H1 id="titulo" textContent="Título"></H1>
 		
-                <IMG ID="imagen" SRC="./imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                <IMG ID="imagen" SRC="./imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT>
                 
 				<A ID="enlace" HREF="pagina1.html" textContent="Pagina">Mi primera página HTML</A>
 				
