Agrego cambios LuisAxel.html

--- a/LuisAxel.html
+++ b/LuisAxel.html
@@ -32,14 +32,13 @@
         <H1>
             <IMG ID="imagen5" SRC="https://i.pinimg.com/originals/90/85/62/908562a0ecff4871d7f3d01f8dbfe4f9.jpg" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=200><BR CLEAR=LEFT><BR><BR>
         </H1>
-        <div class="biography">
-            <h2>About Me</h2>
-            <p>
-                Hello! I'm Luis Axel, a 19-year-old Computer Engineering student at FES Aragón. I am passionate about programming and software development. Currently, I'm focused on enhancing my skills in various programming languages such as Java, Python, C++, HTML, CSS, and a bit of JavaScript. In my free time, I enjoy gaming and exploring the latest trends in technology.
-            </p>
-        </div>
         <div class="row text-center navigation">
-          
+            <div class="col-md-6">
+                <span>&larr;</span><A HREF="pagina4.html">Mi cuarta página HTML</A>
+            </div>
+            <div class="col-md-6">
+                <A ID="enlace5" HREF="pagina2.html">Mi segunda página HTML</A><span>&rarr;</span>
+            </div>
         </div>
         <P></P>
     </BODY>
