--- a/RodrigoRosas.html
+++ b/RodrigoRosas.html
@@ -14,7 +14,7 @@
                 <H1>
                         <IMG ID="imagen1" SRC="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </H1>
-                        <H1 ID="titulo5">Mi primera página HTML contribucion por Rodrigo Rosas</H1>
+                        <H1 ID="titulo">Mi primera página HTML contribucion por Rodrigo Rosas</H1>
                 <P>
                         <BR><BR>
                 </P>
@@ -23,7 +23,7 @@
                                 <span>&larr;</span><A HREF="pagina4.html">Mi 4ta página HTML</A>
                         </div>
                         <div class="col-md-6">
-                                <A ID="enlace5" HREF="pagina2.html">Mi 2da página HTML</A><span>&rarr;</span>
+                                <A ID="enlace" HREF="pagina2.html">Mi 2da página HTML</A><span>&rarr;</span>
                         </div>
                 </div>
                 <P></P>
