--- a/html/DanaSanchez.html
+++ b/html/DanaSanchez.html
@@ -11,10 +11,14 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
-                <H1>
+                <H1 id="titulo">
                         BIENVENIDOS A MI PAGINA
-                        <IMG ID="imagen5" SRC="../imagenes/64ee85766e771d97397c8843ceefbb10.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=600 HEIGHT=500><BR CLEAR=LEFT><BR><BR>
+                       
                 </H1>
+
+                <IMG ID="imagen5" SRC="../imagenes/64ee85766e771d97397c8843ceefbb10.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=600 HEIGHT=500><BR CLEAR=LEFT><BR><BR>
+
+                        <p>Stra Kids Banda Surcoreana que participará enel soundtrack de la pelicula Deadpool and Wolverine.</p>
                 <!--
                         <H1 ID="titulo5">Mi primera página HTML</H1>
                 <P>
@@ -23,10 +27,10 @@
                 -->
                 <div class="row text-center">
                         <div class="col-md-6">
-                                <span>&larr;</span><A HREF="pagina4.html">Mi cuarta página HTML</A>
+                                <span>&larr;</span><a id="enlace" HREF="pagina4.html">Mi cuarta página HTML</a>
                         </div>
                         <div class="col-md-6">
-                                <A ID="enlace5" HREF="pagina2.html">Mi segunda página HTML</A><span>&rarr;</span>
+                                <a ID="enlace5" HREF="pagina2.html">Mi segunda página HTML</a><span>&rarr;</span>
                         </div>
                 </div>
                 <P></P>
