--- a/maximunelsabio.html
+++ b/maximunelsabio.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Maximun el sabio</h1>
-    <h2>que anda la parrana</h2>
+    <h1 textContent="Requerido" id="titulo">Maximun el sabio</h1>
+    <h2>que anda la parranda</h2>
     <p>si lees esto contactate conmigo a traves de mi mail maxir4442@gmail.com.Te leere atentamente</p>
+    <img id="imagen" src="../imagenes/BD1.gif">
+    <a id="enlace" textcontent="Requerido" href="maximunelsabio.html"></a>
 </body>
 </html>
