--- a/MyFirstPage.html
+++ b/MyFirstPage.html
@@ -25,7 +25,7 @@
                                 <span>&larr;</span><A HREF="pagina4.html">Mi cuarta página HTML</A>
                         </div>
                         <div class="col-md-6">
-                                <A ID="enlace5" HREF="pagina2.html">Mi segunda página HTML</A><span>&rarr;</span>
+                                <a ID="enlace5" HREF="pagina2.html" textContent="text">Mi segunda página HTML</a><span>&rarr;</span>
                         </div>
                 </div>
                 <P></P>
