Primera contribucion segunda corrección

--- a/valetl.html
+++ b/valetl.html
@@ -12,7 +12,7 @@
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
         <H1 ID="titulo1" textContent="contenido">Mi primera página HTML</H1>
-        <IMG ID="imagen1" SRC="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50>
+        <IMG ID="imagen1" SRC="../imagenes/BD1.png" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50>
         <A ID="enlace" HREF="pagina2.html" textContent="contenido">Mi segunda página HTML</A>
                 <P></P>
         </BODY>
