--- a/JuanAcevedo.html
+++ b/JuanAcevedo.html
@@ -12,15 +12,15 @@
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
                 <h1 id="title">
-                        <img ID="imagen" SRC="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                        <img ID="imagen" src="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
                 </h1>
                 
                 <div class="row text-center">
                         <div class="col-md-6">
-                                <span>&larr;</span><a HREF="pagina4.html">Mi cuarta página HTML</a>
+                                <span>&larr;</span><a href="pagina4.html">Mi cuarta página HTML</a>
                         </div>
                         <div class="col-md-6">
-                                <A ID="enlace5" HREF="pagina2.html">Mi segunda página HTML</A><span>&rarr;</span>
+                                <a id="enlace" href="pagina2.html">Mi segunda página HTML</a><span>&rarr;</span>
                         </div>
                 </div>
                 <P></P>
