--- a/JuanAcevedo.html
+++ b/JuanAcevedo.html
@@ -11,18 +11,10 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </HEAD>
         <BODY LANG="es-ES" class="container text-center">
-                <h1 id="title">
-                        <img ID="imagen" src="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                <h1 id="title" textContent="prueba">
                 </h1>
-                
-                <div class="row text-center">
-                        <div class="col-md-6">
-                                <span>&larr;</span><a href="pagina4.html">Mi cuarta página HTML</a>
-                        </div>
-                        <div class="col-md-6">
-                                <a id="enlace" href="pagina2.html">Mi segunda página HTML</a><span>&rarr;</span>
-                        </div>
-                </div>
-                <P></P>
+                <img id="imagen" src="../imagenes/BD1.gif" NAME="Imagen1" ALIGN=CENTER WIDTH=700 HEIGHT=50><BR CLEAR=LEFT><BR><BR>
+                <a id="enlace" href="pagina2.html" textContent="prueba text">Mi segunda página HTML</a><span>&rarr;</span>
+            
         </BODY>
 </HTML>
